--- a/app/index.html
+++ b/app/index.html
@@ -18,13 +18,13 @@
     <link rel="stylesheet" href="styles/login.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="xm11App">
+  <body ng-app="xm11App" style="background:url(../images/banner.png) no-repeat;">
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
     <!-- Add your site or application content here -->
-		<div ui-view></div>
+		<div ui-view ></div>
 		
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
