--- a/app/index.html
+++ b/app/index.html
@@ -17,10 +17,11 @@
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/login.css">
     <link rel="stylesheet" href="styles/list.css"/>
+    <link rel="styleshee" href="styles/zj.css"/>t
     <!-- endbuild -->
   </head>
-  <body ng-app="xm11App" style="background:url(../images/banner.png) no-repeat;">
-    <!--[if lte IE 8]>
+  <body ng-app="xm11App" style="background:url(images/banner.png) no-repeat">
+  	<!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
@@ -62,6 +63,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/list.js"></script>
-        <!-- endbuild -->
+ 
+    <!-- endbuild -->
 </body>
 </html>
