--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/login.css">
     <link rel="stylesheet" href="styles/list.css"/>
+    <link rel="stylesheet" href="styles/xq.css"/>
     <!-- endbuild -->
   </head>
   <body ng-app="xm11App" style="background:url(../images/banner.png) no-repeat;">
