--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/login.css">
     <link rel="stylesheet" href="styles/list.css"/>
-    <link rel="styleshee" href="styles/zj.css"/>t
+    <link rel="styleshee" href="styles/zj.css"/>
     <!-- endbuild -->
   </head>
   <body ng-app="xm11App" style="background:url(images/banner.png) no-repeat">
