--- a/app/index.html
+++ b/app/index.html
@@ -65,7 +65,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/list.js"></script>
- 
+        <script src="scripts/controllers/xq.js"></script>
     <!-- endbuild -->
 </body>
 </html>
