--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/textAngular/dist/textAngular.css" />
+    <link rel="stylesheet" type="text/css" href="../bower_components/font-awesome/css/font-awesome.css"/>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -21,7 +22,7 @@
     <link rel="stylesheet" href="styles/zj.css"/>
     <!-- endbuild -->
   </head>
-  <body ng-app="xm11App" style="background:url(images/banner.png) no-repeat;">
+  <body ng-app="xm11App" style="background:url(images/banner.png) no-repeat; ">
   	<!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -64,11 +65,8 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/list.js"></script>
-<<<<<<< HEAD
         <script src="scripts/controllers/xq.js"></script>
-=======
         <script src="scripts/controllers/zj.js"></script>
->>>>>>> origin/HEAD
     <!-- endbuild -->
 </body>
 </html>
