--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/textAngular/dist/textAngular.css" />
-    <link rel="stylesheet" type="text/css" href="../bower_components/font-awesome/css/font-awesome.css"/>
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
