--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,6 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/textAngular/dist/textAngular.css" />
-    
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -20,10 +19,11 @@
     <link rel="stylesheet" href="styles/list.css"/>
     <link rel="stylesheet" href="styles/xq.css"/>
     <link rel="stylesheet" href="styles/zj.css"/>
+    <link rel="stylesheet" href="styles/tu.css"/>
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
     <!-- endbuild -->
   </head>
-  <body ng-app="xm11App" style="background:url(images/banner.png) no-repeat; ">
+  <body ng-app="xm11App" style="background:url(images/banner.png) no-repeat;">
   	<!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -68,6 +68,7 @@
         <script src="scripts/controllers/list.js"></script>
         <script src="scripts/controllers/xq.js"></script>
         <script src="scripts/controllers/zj.js"></script>
+        <script src="scripts/controllers/tu.js"></script>
     <!-- endbuild -->
 </body>
 </html>
