--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
     <!-- endbuild -->
   </head>
-  <body ng-app="xm11App" style="background:url(images/banner.png) no-repeat;">
+  <body ng-app="xm11App" style="background:url(images/banner.png);">
   	<!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
